fix category image of preview torrent that got cropped at lower res

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -451,6 +451,7 @@ html, body {
 		height: auto;
 	}
 	.tr-cat { width: 73px; }
+	.torrent-preview-table .tr-cat { width: 74px; }
 	.tr-links { width: 50px; }
 	.header .h-search input { width: 90px !important; }
 	.header .h-search input:focus { width: 150px !important; }
@@ -1006,7 +1007,7 @@ details[open] summary:after {
 	margin: -4px 5px 0 0;
 }
 
-.nyaa-cat { background: url('/img/categories.png') no-repeat; background-position-x: right!important; max-width: 80px; min-width: 68px; height: 28px; display: block; }
+.nyaa-cat { background: url('/img/categories.png') no-repeat; background-position-x: right!important; max-width: 80px; min-width: 67px; height: 28px; display: block; }
 .nyaa-cat-1 { background-position: 0 -26px; } 
 .nyaa-cat-2 { background-position: 0 -52px; } 
 .nyaa-cat-4 { background-position: 0 -78px; } 
